--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,9 +6,24 @@ body, html {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Montserrat", sans-serif !important;
 }
 
 *{
   margin: 0;
   padding: 0;
+  font-weight: 500;
+  font-family: "Montserrat", sans-serif !important;
+}
+
+.ant-form-item{
+  margin-bottom: 0px !important;
+}
+
+.ant-form-item-label{
+  padding: 5px !important;
+}
+
+a:hover{
+  color: #222831 !important;
 }
