--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,7 +12,7 @@ body, html {
 *{
   margin: 0;
   padding: 0;
-  font-weight: 500;
+  font-weight: 800;
   font-family: "Montserrat", sans-serif !important;
 }
 
@@ -25,5 +25,13 @@ body, html {
 }
 
 a:hover{
-  color: #222831 !important;
+  color: #101624 !important;
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+  background-blend-mode: normal;
 }
